--- a/index.html
+++ b/index.html
@@ -10,45 +10,42 @@
 </head>
 
 <body>
-    <div class="top-part-wrapper">
-        <div class="top-part">
-        </div>
-    </div>
-    <div class="bottom_content">
-        <div class="right-content">
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="#/">通讯录</a></li>
 
-            </ol>
-            <button class="had-got">添加</button>
-            <table>
-                <thead>
-                    <tr>
-                        <th>
-                            姓名
-                        </th>
-                        <th>
-                            手机号
-                        </th>
-                        <th>
-                            邮箱
-                        </th>
-                        <th>
-                            地址
-                        </th>
-                        <th>
-                            QQ号
-                        </th>
-                        <th>
-                            
-                        </th>
-                    </tr>
-                </thead>
-                <tbody>
-                </tbody>
-            </table>
-        </div>
+<div class="bottom_content">
+    <div class="right-content">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><p class="tongxunlu">通讯录</p></li>
+
+        </ol>
+        <button class="had-got">添加</button>
+        <table>
+            <thead>
+            <tr>
+                <th>
+                    姓名
+                </th>
+                <th>
+                    手机号
+                </th>
+                <th>
+                    邮箱
+                </th>
+                <th>
+                    地址
+                </th>
+                <th>
+                    QQ号
+                </th>
+                <th>
+
+                </th>
+            </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
     </div>
+</div>
 
 </body>
 <script src="./data.js"></script>
@@ -96,12 +93,12 @@
         delRes.splice(index, 1)
 
 
-
         localStorage.setItem("email_data", JSON.stringify(delRes))
 
         init()
     }
-      //编辑
+
+    //编辑
     function edit(index) {
         var editRes = JSON.parse(localStorage.getItem("email_data") || "[]")
         localStorage.setItem("editItem", JSON.stringify(editRes[index]))
