--- a/login.html
+++ b/login.html
@@ -9,30 +9,30 @@
 </head>
 
 <body>
-  <div class="Midcon">
-    <ul class="check-type">
-      <li class="sel">
-        登录
-      </li>
-    </ul>
-    <div class="reg">
-      <div class="reg-l">
-        <form class="fro">
-          <input class="int" type="" name="" id="phone" placeholder="请输入用户名" />
-          <input class="int" type="password" name="" id="pas" placeholder="(密码)长度6~20，大小写字母、数字或下划线" />
-          <input type="button" id="butt" value="登录" />
-        </form>
-      </div>
+<div class="Midcon">
+  <ul class="check-type">
+    <li class="sel">
+      登录
+    </li>
+  </ul>
+  <div class="reg">
+    <div class="reg-l">
+      <form class="fro">
+        <input class="int" type="" name="" id="phone" placeholder="请输入用户名" />
+        <input class="int" type="password" name="" id="pas" placeholder="(密码)长度6~20，大小写字母、数字或下划线" />
+        <input type="button" id="butt" value="登录" />
+      </form>
     </div>
-    <p class="test">测试用户名:123456</p>
-    <p class="test">测试密码:111111</p>
   </div>
+  <p class="test">测试用户名:123456</p>
+  <p class="test">测试密码:111111</p>
+</div>
 </body>
 
 <script>
   //密码验证
   var pas = document.querySelector("#pas"); //密码
-  var phone = document.querySelector("#phone"); //用户名
+  var acc = document.querySelector("#phone"); //用户名
   var butt = document.querySelector("#butt"); //登录按钮
   var reg = /^\w{6,20}$/; //检验密码的正则
   var findIndex = "";
@@ -45,13 +45,11 @@
     }
 
   ]
-
-
   butt.onclick = function () {
     //登录的点击事件
-
-    if (!phone.value) {
-      alert("请输入手机号");
+    //window.location.href = "./hello";
+    if (!acc.value) {
+      alert("请输入用户名");
       return;
     }
 
@@ -60,23 +58,31 @@
       return;
     }
 
-    findIndex = ""
-    for (var y = 0; y < account.length; y++) {
-      if (phone.value == account[y].acc) {
-        findIndex = y;
-        break;
-      }
-    }
+    var httpRequest = new XMLHttpRequest();//第一步：创建需要的对象
+    httpRequest.open('POST', './hello', true); //第二步：打开连接
+    httpRequest.setRequestHeader("Content-type","application/x-www-form-urlencoded");//设置请求头 注：post方式必须设置请求头（在建立连接后设置请求头）
+    httpRequest.send('a=1&b=0');//发送请求
 
-    if (typeof findIndex === "string") {
-      alert("没有该用户")
-    } else if (pas.value == account[y].pas) {
-      localStorage.setItem('rentRole', account[y].type)
-      alert('登录成功')
-      window.location.href = "./index.html";
-    } else {
-      alert('密码错误')
-    }
+
+
+    //
+    // findIndex = ""
+    // for (var y = 0; y < account.length; y++) {
+    //   if (phone.value == account[y].acc) {
+    //     findIndex = y;
+    //     break;
+    //   }
+    // }
+    //
+    // if (typeof findIndex === "string") {
+    //   alert("没有该用户")
+    // } else if (pas.value == account[y].pas) {
+    //   localStorage.setItem('rentRole', account[y].type)
+    //   alert('登录成功')
+    //   window.location.href = "./hello";
+    // } else {
+    //   alert('密码错误')
+    // }
 
   }
 </script>
