--- a/login.html
+++ b/login.html
@@ -65,24 +65,24 @@
 
 
 
-    //
-    // findIndex = ""
-    // for (var y = 0; y < account.length; y++) {
-    //   if (phone.value == account[y].acc) {
-    //     findIndex = y;
-    //     break;
-    //   }
-    // }
-    //
-    // if (typeof findIndex === "string") {
-    //   alert("没有该用户")
-    // } else if (pas.value == account[y].pas) {
-    //   localStorage.setItem('rentRole', account[y].type)
-    //   alert('登录成功')
-    //   window.location.href = "./hello";
-    // } else {
-    //   alert('密码错误')
-    // }
+    
+    findIndex = ""
+    for (var y = 0; y < account.length; y++) {
+      if (phone.value == account[y].acc) {
+        findIndex = y;
+        break;
+      }
+    }
+    
+    if (typeof findIndex === "string") {
+      alert("没有该用户")
+    } else if (pas.value == account[y].pas) {
+      localStorage.setItem('rentRole', account[y].type)
+      alert('登录成功')
+      window.location.href = "./index.html";
+    } else {
+      alert('密码错误')
+    }
 
   }
 </script>
